--- a/src/components/Alert/stories/stories.mdx
+++ b/src/components/Alert/stories/stories.mdx
@@ -1,11 +1,12 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 import AlertVariants from './variants';
-import * as AlertStories from './Alert.stories';
+import * as AlertStories from './stories';
 
 <Meta title="Basic UI/Alert" component={AlertVariants} />
 
 export const Template = (args) => <AlertVariants {...args } />
+
 
 # Alert
 An alert displays a short, important message in a way that attracts the user's attention without interrupting the user's task.
@@ -63,7 +64,6 @@ const hideAlert = () => setAlertConfig({
 
 {alertConfig.message && <Alert {...alertConfig} clearAlert={hideAlert}/>}
 ```
-
 
 ## How to use with global state?
 ```
