--- a/src/components/Chip/stories/stories.mdx
+++ b/src/components/Chip/stories/stories.mdx
@@ -1,7 +1,7 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 import ChipVariants from './variants';
-import * as ChipStories from './Chip.stories';
+import * as ChipStories from './stories';
 
 <Meta title="Basic UI/Chip" component={ChipVariants} />
 
